--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,8 @@ img {
   overflow: hidden;
   position: relative;
   background-color: #005FE0; 
+  background: #ad5389;
+
 }
 
 .marquee p {
@@ -188,6 +190,7 @@ img {
   white-space: nowrap;
   margin-right: 100%;
   animation: marquee 10s linear infinite;
+  background: #ad5389;
 }
 
 @keyframes marquee {
@@ -795,7 +798,7 @@ img {
   color: #5d5d5d;
   font-weight: 700;
 }
-.footer__form_btn {
+/* .footer__form_btn {
   background: #005FE0;
   color: white;
   text-align: center;
@@ -806,7 +809,70 @@ img {
   width: 100%;
   margin-bottom: 30px;
   border-radius: 30px;
-}
+} */
+
+.footer__form_btn {
+  outline: 0;
+  border: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 100%px;
+  height: 50px;
+  border-radius: 0.5em;
+  box-shadow: 0 0.625em 1em 0 rgba(30, 143, 255, 0.35);
+  overflow: hidden;
+  margin: 20px 0px
+ }
+ 
+ .footer__form_btn div {
+  transform: translateY(0px);
+  width: 100%;
+ }
+ 
+ .footer__form_btn,
+ .footer__form_btn div {
+  transition: 0.6s cubic-bezier(.16,1,.3,1);
+ }
+ 
+ .footer__form_btn div span {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  padding: 0.75em 1.125em;
+  justify-content: center;
+ }
+ 
+ .footer__form_btn div:nth-child(1) {
+  background-color: #1e90ff;
+ }
+ 
+ .footer__form_btn div:nth-child(2) {
+  background-color: #21dc62;
+ }
+ 
+ .footer__form_btn:hover {
+  box-shadow: 0 0.625em 1em 0 rgba(33, 220, 98, 0.35);
+ }
+ 
+ .footer__form_btn:hover div {
+  transform: translateY(-50px);
+ }
+ 
+ .footer__form_btn p {
+  font-size: 17px;
+  font-weight: bold;
+  color: #ffffff;
+ }
+ 
+ .footer__form_btn:active {
+  transform: scale(0.95);
+ }
+
+
+
+
+
 @media (min-width: 550px) {
   .footer__form_btn {
     font-size: 24px;
@@ -1182,7 +1248,7 @@ img {
   background: var(--btn-color);
   text-align: center;
   padding: 10px;
-  width: 100%;
+  width: 65%;
   display: inline-block;
   margin-bottom: 20px;
   display: flex;
@@ -1198,7 +1264,7 @@ img {
   background: var(--bg);
   text-align: center;
   padding: 10px;
-  width: 100%;
+  width: 65%;
   display: inline-block;
   margin-bottom: 20px;
   display: flex;
@@ -1358,7 +1424,7 @@ img {
 }
 
 .sectionReviews__title {
-  text-align: center;
+  /* text-align: center; */
   font-size: calc(20px + 4 * ((100vw - 320px) / 230));
   font-weight: 700;
   text-transform: uppercase;
@@ -1634,7 +1700,7 @@ img {
 }
 
 .limited {
-  width: 100%;
+  width: 65%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -2087,7 +2153,7 @@ rgba(151,200,255,.44);
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 12%;
   background: #fff;
   height: 100dvh;
   display: flex;
@@ -2346,7 +2412,7 @@ rgba(151,200,255,.44);
   font-size: 22px;
   font-weight: 700;
   color: #000;
-  text-align: center;
+  /* text-align: center; */
   margin-bottom: 16px;
   padding: 20px 0px;
   border-top: 1px dotted grey;
@@ -2356,6 +2422,79 @@ rgba(151,200,255,.44);
   margin-bottom: 20px;
   font-size: 14px;
   color: #000;
-  text-align: center;
+  /* text-align: center; */
   line-height: 20px;
+}
+
+.rating-snapshot p{
+    padding: 10px 0px;
+    margin: 0px;
+    border-width: 0px;
+    border-style: none;
+    border-color: transparent;
+    border-radius: 0px;
+    background: transparent;
+    font-size: 16px;
+    color: rgb(0, 0, 0);
+    line-height: 19.5px;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: none;
+    text-decoration: none;
+}
+.rating-snapshot2 {
+  padding: 10px 0px;
+  margin: 0px;
+  border-width: 0px;
+  border-style: none;
+  border-color: transparent;
+  border-radius: 0px;
+  background: transparent;
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  line-height: 19.5px;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: none;
+  text-decoration: none;
+}
+
+.progressbar1{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.progress-bar {
+  width: 350px;
+  background-color: #ddd;
+  height: 10px;
+  border-radius: 10px;
+  margin: 20px 0;
+  overflow: hidden;
+  margin: 0px;
+}
+
+.progress-fill {
+  height: 100%;
+  background-color: #4caf50; /* Green color for the filled portion */
+  border-radius: 10px;
+}
+
+.reviewss{
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  align-items: center;
+}
+.reviewss h2{
+  font-size: 45px;
+  line-height: 40px;
+  height: 50px;
+  min-width: 60px;
+  padding: 5px 5px 5px 0px;
+  color: rgb(0, 0, 0);
+  font-style: normal;
+  font-weight: normal;
+  text-transform: none;
+  text-decoration: none;
 }
